--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "keywords": ["beauty", "core"],
   "license": "MIT",
   "authors": [],
-  "version": "1.0.0",
+  "version": "1.0.1",
   "minimum-stability": "stable",
   "require": {
     "php": ">=8.1",
@@ -13,12 +13,12 @@
     "beauty-framework/cli": "^1.0",
     "spiral/roadrunner": "^2024",
     "spiral/roadrunner-http": "^3.4.0",
-    "symfony/finder": "8.0.x-dev",
+    "symfony/finder": "^7.3",
     "spiral/roadrunner-cli": "^2.2",
     "php-di/php-di": "dev-master",
     "vlucas/phpdotenv": "^5.6@dev",
-    "roadrunner-php/lock": "1.x-dev",
-    "psr/event-dispatcher": "^1.0@dev"
+    "roadrunner-php/lock": "^1.0",
+    "psr/event-dispatcher": "^1.0"
   },
   "autoload": {
     "psr-4": {
