--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "symfony/finder": "^7.3",
     "spiral/roadrunner-cli": "^2.2",
     "php-di/php-di": "^7.0",
-    "vlucas/phpdotenv": "^5.6@dev",
+    "vlucas/phpdotenv": "^5.6",
     "roadrunner-php/lock": "^1.0",
     "psr/event-dispatcher": "^1.0"
   },
